Adding back commented out sections that were part of original design

--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
   </head>
   <body>
     <header id="notifications">
+      <!--Calling all One D&D playtesters! Take our first survey and help shape the future of D&D!-->
       <img src="/Assets/notifications.png" alt="notification banner" />
     </header>
 
     <section id="search-site">
       <section id="d&d-beyond">
+        <!--D&D Beyond-->
         <img src="/Assets/dndbeyond.png" alt="dnd beyond logo" />
       </section>
       <section id="search-everything">
+        <!--Search Everything...-->
         <img src="/Assets/SearchEverything.png" alt="Search Bar" />
       </section>
       <section id="social-links">
@@ -32,6 +35,7 @@
       </section>
 
       <section id="user-login">
+        <!--czarapatahunter-->
         <img src="/Assets/LoginInfo.png" alt="User Login Information" />
       </section>
     </section>
@@ -40,7 +44,7 @@
       <div id="class-word">
         <img src="/Assets/dropdowns.png" alt="dropdown menus" />
       </div>
-      <!--<div>Collections</div>
+      <!--<div id="social-links">Collections</div>
       <div>Game Rules</div>
       <div>Sources</div>
       <div>Tools</div>
@@ -53,22 +57,33 @@
 
     <section id="class-rules">
       <div>
-        <img src="/Assets/Classes.png" alt="Classes Picture" />
+        <!--Classes-->
+        <img
+          src="/Assets/Classes.png"
+          alt="Classes Picture"
+        /><!--Classes Rules-->
       </div>
       <div id="rules-sub-homebrew">
         <div>
           <img src="/Assets/ClassesRules.png" alt="Classes Rules" />
         </div>
         <div>
-          <img src="/Assets/CreateASubclass.png" alt="Create A Subclass" />
+          <img
+            src="/Assets/CreateASubclass.png"
+            alt="Create A Subclass"
+          /><!--Create A Subclass-->
         </div>
         <div>
-          <img src="/Assets/BrowseHomebrew.png" alt="Browse Homebrews" />
+          <img
+            src="/Assets/BrowseHomebrew.png"
+            alt="Browse Homebrews"
+          /><!--Browse Homebrew-->
         </div>
       </div>
     </section>
 
     <section id="search-name">
+      <!--Players Handbook / Basic Rules-->
       <img src="/Assets/PlayersHandbook.png" alt="PlayerHandbook" />
       <!--<div>Search By Name</div>
       <div>Players Handbook Basic Rules</div>-->
